--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@ body{
     
 }
 
+#loader{
+    display: none;
+}
+
 a{
    text-decoration: none;
    color: white;
@@ -160,12 +164,12 @@ input:focus{
     border: 2px solid ;
     width: 100%;
     justify-content: center;
-    gap: 1em;
+    gap: 4em;
     color: white;
     font-weight: 800;
     margin: 0 auto;
   
-    gap: .7em;
+    /* gap: .7em; */
     /* position: absolute; */
 }   
 .movie-info{
