--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ p{
 
 .instructions {
     background-color: instructions;
+    font-size: 1.5rem;
 }
 
 .watchlist-btn p{
@@ -77,6 +78,23 @@ h3 {
 .movie-rating{
     font-size: .7em;
 }
+
+.Dark-bg{
+    background-color: rgb(60, 53, 53);
+    padding: .75em;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px;
+    font-size: 1.75rem;
+    opacity: .85;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+}
+
+
+
 
 input{
     width: 100%;
